# BOT-MMORPG-AI

./: .editorconfig  .env.example  .gitattributes  .gitignore  BUILD_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  FIXES_APPLIED.md  GAMER_MARKETING_SUMMARY.md  INSTALLER.md  INSTALLER_BUILD_FIX.md  INSTALLER_IMPROVEMENTS.md  LAUNCHER_STATUS.md  LICENSE  Makefile  Makefile.modelhub  NOTES.md  PRODUCTION_READY_SUMMARY.md  README.md  RUNNING_THE_APP.md  SETUP_GUIDE.md  TAURI.md  TWO_UIS_EXPLAINED.md  UI_BACKEND_INTEGRATION_ANALYSIS.md  UI_IMPROVEMENTS_SUMMARY.md  USAGE.md  active_model.json  clean.sh  modelhub_registry.json  patch.sh  pyproject.toml
.github/workflows/: build-windows-installer.yml  ci.yml  release-windows-installer.yml  release.yml  update-docs-download.yml
backend/: entry_main.py  main_backend.py
catalog/: catalog.json
catalog/games/dragon_ball_online/: game.json
catalog/games/genshin_impact/: game.json
catalog/games/world_of_warcraft/: game.json
docs/: LAUNCHER_INTEGRATION_HINT.md  MODELHUB_DISCLAIMER.md  MODEL_NAMING_RULES.md  OPTIONAL_S3_R2_VAULT.md  TODO.md  index.html
frontend/: README.md  __init__.py
frontend/input_record/: __init__.py
frontend/video_record/: __init__.py
game_profiles/: index.yaml
game_profiles/_template/: profile.yaml
game_profiles/dragon_ball_online/: profile.yaml
game_profiles/final_fantasy_xiv/: profile.yaml
game_profiles/genshin_impact/: profile.yaml
game_profiles/guild_wars_2/: profile.yaml
game_profiles/lost_ark/: profile.yaml
game_profiles/new_world/: profile.yaml
game_profiles/world_of_warcraft/: profile.yaml
installer/: nsis_template.nsi
launcher/: README.md  __init__.py  launcher.py  main.py  requirements.txt
launcher/ui/: __init__.py
launcher/web/: main.html
launcher/web/js/: wizard.js
launcher/wizard/: __init__.py  wizard_controller.py
launcher/wizard/steps/: __init__.py
modelhub/: __init__.py  builtin_models.py  cli.py  fs_snapshot.py  local_store.py  model_metadata.py  naming.py  paths.py  profile_writer.py  registry.py  registry_store.py  s3_backend.py  session_manager.py  settings.py  tauri.py  validator.py
scripts/: build_backend_sidecar.ps1  build_pipeline.ps1  dev_test_backend.ps1  dev_test_backend.py  download_models.ps1  evaluate_local_model.py  install_drivers.ps1  install_windows.ps1  modelhub_cli.py  prepare_python_from_pyproject_embed310_target.ps1  prepare_python_from_pyproject_embed311_target.ps1  test_installer.ps1  verify_installer.ps1
settings/: defaults.yaml  user_preferences.yaml.template
src-tauri/: Cargo.toml  license.txt  tauri.conf.json
src-tauri/catalog/: catalog.json
src-tauri/catalog/games/genshin_impact/: game.json
src-tauri/resources/python/: README.txt
src-tauri/resources/scripts/: install_drivers.ps1  install_ml_deps.ps1
src-tauri/resources/wheelhouse/: README.txt
src-tauri/src/: main.rs  modelhub.rs  python.rs
src-tauri/src/commands/: mod.rs
src/bot_mmorpg/: __init__.py
src/bot_mmorpg/bridge/: __init__.py  handlers.py  server.py
src/bot_mmorpg/config/: __init__.py  action_mapping.py  game_resolutions.py  hardware_detector.py  model_selector.py  profile_loader.py  settings_manager.py
src/bot_mmorpg/inference/: __init__.py  engine.py
src/bot_mmorpg/models/: __init__.py
src/bot_mmorpg/scripts/: __init__.py  collect_data.py  directkeys.py  getgamepad.py  getkeys.py  grabscreen.py  models.py  models_pytorch.py  mouse_capture.py  test_model.py  train_model.py  vjoy2.py
src/bot_mmorpg/training/: __init__.py  curriculum.py
src/bot_mmorpg/utils/: __init__.py  secure_loader.py  version.py
src/bot_mmorpg/visualization/: __init__.py  attention.py  overlays.py
tauri-ui/: index.html  main.js  package-lock.json  package.json  vite.config.js
tauri-ui/js/: wizard.js
tauri-ui/src/: main.js  tauri.js  ui.js
tauri-ui/styles/: training-school.css
tests/: __init__.py  conftest.py  test_backend_startup.py  test_config_system.py  test_e2e_workflow.py  test_mmorpg_quality.py  test_model_resolutions.py  test_mouse_capture.py  test_networks.py  test_production_ready.py  test_tauri_production_readiness.py  test_tauri_release_quality.py  test_tauri_ui_smoke.py  test_tauri_unit_phases.py  test_training_school_api.py  test_wizard_launcher.py
tests/health/: test_health_smoke.py
tests/integration/: test_integration_example.py
tests/unit/: test_example.py
versions/0.01/: 1-Collect_Data_Preprocessed-rgb.ipynb  1-Collect_Data_Processed_single_color.ipynb  1-collect_data.py  2-Classes-Generator.ipynb  2-train_model.py  2-train_model_cleaned.ipynb  2-train_model_preprocessed.ipynb  2-train_model_processed.ipynb  3-test_model-processed.ipynb  3-test_model.ipynb  3-test_model.py  3_Visualizing_Intermediate_Representations.ipynb  Preprocessing.ipynb  crooping.ipynb  directkeys.py  gamepad.ipynb  grabscreen.py  models.py  numpy analsis.ipynb  read_current_state.ipynb  requirements.lock.txt  vjoy2.py
