[package]
name = "bot-mmorpg-ai"
version = "0.1.5"
description = "BOT MMORPG AI"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = [ "shell-open", "path-all", "window-all", "fs-all", "shell-execute"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
