# src-tauri/Cargo.toml
[package]
name = "bot-mmorpg-ai"
version = "0.1.5"
description = "BOT MMORPG AI"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "fs-all", "shell-execute"] }
urlencoding = "2"

# JSON + (de)serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for talking to modelhub/tauri.py local API (127.0.0.1)
# - "json" enables convenient .json() (de)serialization
# - "rustls-tls" avoids depending on native OpenSSL on Windows
# - "gzip"/"brotli" are optional but commonly useful; safe to include
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }

# Needed by reqwest async client + general async tasks in Tauri commands
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
